--- a/domain.yml
+++ b/domain.yml
@@ -8,6 +8,7 @@ intents:
   - mood_great
   - mood_unhappy
   - bot_challenge
+  - get_bitcoin_price
 
 responses:
   utter_greet:
@@ -32,3 +33,14 @@ responses:
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
+
+actions:
+- action_get_bitcoin_price
+
+
+slots:
+  bitcoin_price:
+    type: text
+    influence_conversation: false
+    mappings:
+    - type: custom
